--- a/action_groups.html
+++ b/action_groups.html
@@ -150,11 +150,11 @@
   <div class="container">
 
       <h2>Global Action Groups</h2>
-        <p style="text-align: left">
+        <!--p style="text-align: left">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit
           Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit
           Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit
-        </p>
+        </p-->
 
     <div class="content" style="padding-top: 30px">
         <div class="twoparts-left">
