--- a/data_access.html
+++ b/data_access.html
@@ -168,7 +168,7 @@
     <div class="content" >
      <div class="fourparts-one";>
         <figure>
-          <img src="figures/dataaccess01.jpg" alt="related articles"/>
+          <img src="figures/dataaccess01.jpg" alt="data access policy"/>
           <p style="text-align: left; ">
           <b>Data access policy</b>
           </p>
@@ -179,7 +179,7 @@
      </div>
      <div class="fourparts-two">
         <figure>
-          <img src="figures/dataaccess02.jpg" alt="related articles"/>
+          <img src="figures/dataaccess02.jpg" alt="data archiving"/>
           <p style="text-align: left; ">
           <b>Data archiving</b>
           </p>
@@ -190,7 +190,7 @@
      </div>
      <div class="fourparts-three">
         <figure>
-          <img src="figures/dataaccess03.jpg" alt="related articles"/>
+          <img src="figures/dataaccess03.jpg" alt="instrumental metadata"/>
           <p style="text-align: left; ">
           <b>Instrumental Metadata</b>
           </p>
@@ -201,7 +201,7 @@
      </div>
      <div class="fourparts-four">
         <figure>
-          <img src="figures/dataaccess04.jpg" alt="related articles"/>
+          <img src="figures/dataaccess04.jpg" alt="quality control"/>
           <p style="text-align: left; ">
           <b>Quality Control</b>
           </p>
