--- a/data_uses.html
+++ b/data_uses.html
@@ -118,7 +118,7 @@
     <div class="content">
      <div class="twoparts-left">
         <figure>
-          <img src="figures/buoy_density.jpg" alt="drifting buoy density" />
+          <img src="figures/weather_forecasting.jpg" alt="weather forecasting and hazard prediction" />
         </figure>
         <p style="text-align: left"><b>Weather Forecasting & Hazard Prediction</b></p>
         <p style="text-align: left">
@@ -130,7 +130,7 @@
      </div>
      <div class="twoparts-right">
         <figure>
-          <img src="figures/moored_buoy.jpg" alt="moored buoy density" />
+          <img src="figures/marine_safety.jpg" alt="marine safety and hurricane forecasting" />
         </figure>
         <p style="text-align: left"><b>Marine Safety and Hurricane Forecasting</b></p>
         <p style="text-align: left">
@@ -141,7 +141,7 @@
     <div class="content">
      <div class="twoparts-left">
         <figure>
-          <img src="figures/buoy_density.jpg" alt="drifting buoy density" />
+          <img src="figures/climate_prediction.jpg" alt="seasonal and long term climate prediction" />
         </figure>
         <p style="text-align: left"><b>Seasonal & Long-Term Climate Predictions</b></p>
         <p style="text-align: left">
@@ -161,7 +161,7 @@
      </div>
      <div class="twoparts-right">
         <figure>
-          <img src="figures/moored_buoy.jpg" alt="moored buoy density" />
+          <img src="figures/fisheries_ecosystems.jpg" alt="supporting fisheries and marine ecosystems" />
         </figure>
         <p style="text-align: left"><b>Supporting Fisheries & Marine Ecosystems</b></p>
         <p style="text-align: left">
