--- a/e_stewardship.html
+++ b/e_stewardship.html
@@ -132,7 +132,7 @@
     <div class="content">
      <div class="twoparts-left">
         <figure>
-          <img src="figures/buoy_density.jpg" alt="drifting buoy density" />
+          <img src="figures/environment01.jpg.jpg" alt="dbcp environmental stewardship" />
         </figure>
         <p style="text-align: left">
           The following list are the UN and global instruments on environmental stewardship related to the ocean observation:
@@ -160,7 +160,7 @@
      </div>
      <div class="twoparts-right">
         <figure>
-          <img src="figures/moored_buoy.jpg" alt="moored buoy density" />
+          <img src="figures/environment02.jpg" alt="dbcp environmental stewardship" />
         </figure>
         <p style="text-align: left">
           The following list are the National and regional Environmental Impact Assessments on environmental stewardship:
