--- a/platform.html
+++ b/platform.html
@@ -143,7 +143,7 @@
       <div class="left-image">
         <figure>
           <img src="figures/Drifting_buoy.jpg" alt="Drifting buoy" />
-          <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption>
+          <!--figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption-->
         </figure>
       </div>
       <!-- Right Column: Text -->
@@ -183,7 +183,7 @@ The DBCP has now mostly standardised on the use of SVP and SVP buoys, and their 
       <div class="left-image">
         <figure>
           <img src="figures/ice_buoy.jpg" alt="Ice buoy" />
-          <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption>
+          <!--figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption-->
         </figure>
       </div>
       <!-- Right Column: Text -->
@@ -215,7 +215,7 @@ The DBCP has now mostly standardised on the use of SVP and SVP buoys, and their 
       <div class="left-image">
         <figure>
           <img src="figures/Moored_buoy.png" alt="Moored buoy" />
-          <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption>
+          <!--figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption-->
         </figure>
       </div>
       <!-- Right Column: Text -->
@@ -257,8 +257,8 @@ The DBCP has now mostly standardised on the use of SVP and SVP buoys, and their 
       <!-- Left Column: Image -->
       <div class="left-image">
         <figure>
-          <img src="figures/Moored_buoy.png" alt="Tropical moored buoy" />
-          <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption>
+          <img src="figures/Tropical_moored_buoy.png" alt="Tropical moored buoy" />
+          <!--figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption-->
         </figure>
       </div>
       <!-- Right Column: Text -->
@@ -292,8 +292,8 @@ The DBCP has now mostly standardised on the use of SVP and SVP buoys, and their 
       <!-- Left Column: Image -->
       <div class="left-image">
         <figure>
-          <img src="figures/Moored_buoy.png" alt="Wave buoy" />
-          <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption>
+          <img src="figures/Wave_buoy.png" alt="Wave buoy" />
+          <!--figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption-->
         </figure>
       </div>
       <!-- Right Column: Text -->
@@ -325,8 +325,8 @@ The DBCP has now mostly standardised on the use of SVP and SVP buoys, and their 
       <!-- Left Column: Image -->
       <div class="left-image">
         <figure>
-          <img src="figures/Moored_buoy.png" alt="OceanSITES reference time series stations" />
-          <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption>
+          <img src="figures/Oceansites.png" alt="OceanSITES reference time series stations" />
+          <!--figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</figcaption-->
         </figure>
       </div>
       <!-- Right Column: Text -->
