--- a/action_groups.html
+++ b/action_groups.html
@@ -90,7 +90,7 @@
  
     <div class="container">
     <div class="hero-content">
-    <h1 style="text-shadow: 0 0 5px #EBF5FF, 0 0 25px white;">DBCP Action Groups</h1>
+    <h1 style="text-shadow: 0 0 5px #EBF5FF, 0 0 25px white;">DBCP: Strengthening ocean monitoring for a resilient and sustainable future</h1>
     
       
       <div class="hero-logos">
@@ -113,6 +113,7 @@
 
 <section class="article-section">
   <div class="container">
+      <h2>DBCP Action Groups</h2>
       <p style="text-align: left">
         Much of the work achieved by the DBCP is through Action Groups. Each group maintains an observational buoy program that supplies data for operational and research purposes. The implementation of buoy deployments is also coordinated through global, regional, or specialized Action Groups.
       </p>
