--- a/action_groups.html
+++ b/action_groups.html
@@ -350,33 +350,33 @@
     <div class="content" >
      <div class="fourparts-one"; style="border-bottom: 0px;">
         <figure>
-          <img src="figures/axys_1.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_about.jpg" alt="related articles"/>
+          <a href="about_us.html" target="_blank">
+            <p style="text-align: center; ">About us</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-two">
         <figure>
-          <img src="figures/axys_2.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center;">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_network_status_and_map.jpg" alt="related articles"/>
+          <a href="network_status_and_map.html" target="_blank">
+            <p style="text-align: center;">Network status and map</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-three">
         <figure>
-          <img src="figures/axys_3.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center;">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_platform.jpg" alt="related articles"/>
+          <a href="platform.html" target="_blank">
+            <p style="text-align: center;">Buoy platforms</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-four">
         <figure>
-          <img src="figures/axys_4.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center;">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_deployment.jpg" alt="related articles"/>
+          <a href="deployment.html" target="_blank">
+            <p style="text-align: center;">Buoy deployment</p>
           </a>
         </figure>
     </div>
