--- a/e_stewardship.html
+++ b/e_stewardship.html
@@ -132,7 +132,7 @@
     <div class="content">
      <div class="twoparts-left">
         <figure>
-          <img src="figures/environment01.jpg.jpg" alt="dbcp environmental stewardship" />
+          <img src="figures/environment01.jpg" alt="dbcp environmental stewardship" />
         </figure>
         <p style="text-align: left">
           The following list are the UN and global instruments on environmental stewardship related to the ocean observation:
