--- a/network_status_and_map.html
+++ b/network_status_and_map.html
@@ -193,7 +193,7 @@
     <div class="content" >
      <div class="fourparts-one";>
         <figure>
-          <img src="figures/axys_1.jpg" alt="related articles"/>
+          <img src="figures/thumbnail_data_uses.jpg" alt="related articles"/>
           <a href="data_uses.html" target="_blank">
             <p style="text-align: center;">Uses of buoy data</p>
           </a>
@@ -201,7 +201,7 @@
      </div>
      <div class="fourparts-two">
         <figure>
-          <img src="figures/axys_2.jpg" alt="related articles"/>
+          <img src="figures/thumbnail_barometer_upgrade.jpg" alt="related articles"/>
           <a href="barometer_upgrade.html" target="_blank">
             <p style="text-align: center; ">Barometer upgrade</p>
           </a>
@@ -209,7 +209,7 @@
      </div>
      <div class="fourparts-three">
         <figure>
-          <img src="figures/axys_3.jpg" alt="related articles"/>
+          <img src="figures/thumbnail_data_access.jpg" alt="related articles"/>
           <a href="data_access.html" target="_blank">
             <p style="text-align: center; ">Accessing buoy data</p>
           </a>
@@ -217,7 +217,7 @@
      </div>
      <div class="fourparts-four">
         <figure>
-          <img src="figures/axys_4.jpg" alt="related articles"/>
+          <img src="figures/thumbnail_qc.jpg" alt="related articles"/>
           <a href="qc.html" target="_blank">
             <p style="text-align: center; ">Buoy data quality control</p>
           </a>
