--- a/platform.html
+++ b/platform.html
@@ -358,33 +358,33 @@ The DBCP has now mostly standardised on the use of SVP and SVP buoys, and their 
     <div class="content" >
      <div class="fourparts-one";>
         <figure>
-          <img src="figures/axys_1.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_network_status_and_map.jpg" alt="related articles"/>
+          <a href="network_status_and_map.html" target="_blank">
+            <p style="text-align: center; ">Network status and map</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-two">
         <figure>
-          <img src="figures/axys_2.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_data_access.jpg" alt="related articles"/>
+          <a href="data_access.html" target="_blank">
+            <p style="text-align: center; ">Data access</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-three">
         <figure>
-          <img src="figures/axys_3.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_qc.jpg" alt="related articles"/>
+          <a href="qc.html" target="_blank">
+            <p style="text-align: center; ">Quality Control of Data</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-four">
         <figure>
-          <img src="figures/axys_4.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_share_data.jpg" alt="related articles"/>
+          <a href="share_data" target="_blank">
+            <p style="text-align: center; ">Sharing your data</p>
           </a>
         </figure>
     </div>
