--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="container">
     <div class="hero-content">
     <!--h1 style="text-shadow: 0 0 5px #EBF5FF, 0 0 25px white;">The DBCP: Global cooperation for ocean observations, supporting climate resilience and sustainable ocean governance</h1-->
-    <h1 style="font-color: white;">The DBCP: Global cooperation for ocean observations, supporting climate resilience and sustainable ocean governance</h1>
+    <h1 style="color: white;">The DBCP: Global cooperation for ocean observations, supporting climate resilience and sustainable ocean governance</h1>
     
       
       <div class="hero-logos">
