--- a/anti_vandalism.html
+++ b/anti_vandalism.html
@@ -89,7 +89,7 @@
  
     <div class="container">
     <div class="hero-content">
-    <h1 style="text-shadow: 0 0 5px #EBF5FF, 0 0 25px white;">Buoys are there to keep us save, let's do our part in keeping them save</h1>
+    <h1>Buoys are there to keep us save, let's do our part in keeping them save</h1>
     
       
       <div class="hero-logos">
