--- a/platform.html
+++ b/platform.html
@@ -89,7 +89,7 @@
  
     <div class="container">
     <div class="hero-content">
-    <h1 style="text-shadow: 0 0 5px #EBF5FF, 0 0 25px white;">Ocean buoys: the floating observatories powering ocean and climate science</h1>
+    <h1>Ocean buoys: the floating observatories powering ocean and climate science</h1>
     
       
       <div class="hero-logos">
