--- a/publications.html
+++ b/publications.html
@@ -80,7 +80,6 @@
   
   
   <!-- Hero Section -->
-  <!-- <section class="hero" style="background-image: url('https://images.freeimages.com/images/large-previews/510/ocean-waves-1341653.jpg?fmt=webp&h=350')"> -->
   <section 
     class="hero" 
     style="background-image: url('figures/headbanner09.jpg'); 
@@ -90,7 +89,7 @@
  
     <div class="container">
     <div class="hero-content">
-    <h1 style="text-shadow: 0 0 5px #EBF5FF, 0 0 25px white;">DBCP: Supporting Research, Advancing Ocean Observations</h1>
+    <h1>DBCP: Supporting Research, Advancing Ocean Observations</h1>
     
       
       <div class="hero-logos">
