--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
  
     <div class="container">
     <div class="hero-content">
-    <h1 style="text-shadow: 0 0 5px #EBF5FF, 0 0 25px white;">DBCP: Strengthening ocean monitoring for a resilient and sustainable future</h1>
+    <h1>DBCP: Strengthening ocean monitoring for a resilient and sustainable future</h1>
     
       
       <div class="hero-logos">
