--- a/data_access.html
+++ b/data_access.html
@@ -89,7 +89,7 @@
  
     <div class="container">
     <div class="hero-content">
-    <h1 style="text-shadow: 0 0 5px #EBF5FF, 0 0 25px white;">Connecting You to the Ocean: Fast, Reliable, and Open Access to Buoy Data</h1>
+    <h1>Connecting You to the Ocean: Fast, Reliable, and Open Access to Buoy Data</h1>
     
       
       <div class="hero-logos">
