--- a/data_uses.html
+++ b/data_uses.html
@@ -89,7 +89,7 @@
  
     <div class="container">
     <div class="hero-content">
-    <h1 style="text-shadow: 0 0 5px #EBF5FF, 0 0 25px white;">Drifting with Purpose, Anchored in Science – Advancing Climate, Safety, and Sustainability.</h1>
+    <h1>Drifting with Purpose, Anchored in Science – Advancing Climate, Safety, and Sustainability.</h1>
     
       
       <div class="hero-logos">
