--- a/e_stewardship.html
+++ b/e_stewardship.html
@@ -89,7 +89,7 @@
  
     <div class="container">
     <div class="hero-content">
-    <h1 style="text-shadow: 0 0 5px #EBF5FF, 0 0 25px white;">Observing the oceans responsibly – advancing science through sustainable stewardship</h1>
+    <h1>Observing the oceans responsibly – advancing science through sustainable stewardship</h1>
     
       
       <div class="hero-logos">
