--- a/network_status_and_map.html
+++ b/network_status_and_map.html
@@ -97,7 +97,7 @@
  
     <div class="container">
     <div class="hero-content">
-    <h1 style="text-shadow: 0 0 5px #EBF5FF, 0 0 25px white;">Mapping the Seas in Real Time – The Global Buoy Network at Work </h1>
+    <h1>Mapping the Seas in Real Time – The Global Buoy Network at Work </h1>
     
       
       <div class="hero-logos">
