--- a/qc.html
+++ b/qc.html
@@ -81,7 +81,6 @@
   
   
   <!-- Hero Section -->
-  <!-- <section class="hero" style="background-image: url('https://images.freeimages.com/images/large-previews/510/ocean-waves-1341653.jpg?fmt=webp&h=350')"> -->
   <section 
     class="hero" 
     style="background-image: url('figures/headbanner04.jpg'); 
@@ -91,7 +90,7 @@
  
     <div class="container">
     <div class="hero-content">
-    <h1 style="text-shadow: 0 0 5px #EBF5FF, 0 0 25px white;">Quality Matters: Monitoring and Improving Buoy Data for a Better Ocean Observation</h1>
+    <h1>Quality Matters: Monitoring and Improving Buoy Data for a Better Ocean Observation</h1>
     
       
       <div class="hero-logos">
