--- a/share_data.html
+++ b/share_data.html
@@ -89,7 +89,7 @@
  
     <div class="container">
     <div class="hero-content">
-    <h1 style="text-shadow: 0 0 5px #EBF5FF, 0 0 25px white;">Delivering Ocean Insights – Preserving Data for the Future</h1>
+    <h1>Delivering Ocean Insights – Preserving Data for the Future</h1>
     
       
       <div class="hero-logos">
