--- a/about.html
+++ b/about.html
@@ -349,7 +349,11 @@
       <!-- Right Column: Text -->
       <div class="right-text" >
         <p style="text-align: left">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          The Data Buoy Cooperation Panel (DBCP) Action Groups play a pivotal role in advancing global ocean observation by overseeing 
+          independent buoy programs that deliver critical meteorological and oceanographic data. These groups, formally approved by 
+          the DBCP, support vital programs like the World Weather Watch and the Global Ocean Observing System, ensuring timely and 
+          high-quality data reaches users worldwide. By fostering collaboration and technology exchange, DBCP Action Groups strengthen 
+          the international community's ability to monitor and understand our oceans, driving impactful research and environmental stewardship.
         </p>
         <p>
           The DBCP operates through a variety of teams and groups, including:
